[package]
name = "limit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1"

limit-am = { path = "./limit-am" }
limit-server-auth = { path = "./limit-server-auth" }
limit-db = {path = "./limit-db"}
limit-config = {path = "./limit-config"}

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",
    # "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]

[dev-dependencies]
limit-server-auth-test = { path = "./limit-server-auth-test" }
limit-server-event-test = { path = "./limit-server-event-test" }
limit-test-utils = { path = "./limit-test-utils" }
tokio-util = "*"
futures = "*"

[workspace]
members = [
    "limit-server-auth",
    "limit-server-auth-test",

    "limit-server-event",
    "limit-server-event-sync",
    "limit-server-event-test",

    "limit-db",
    "limit-config",
    "limit-test-utils",

    "limit-utils",

    "volo-gen"
]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
