[package]
name = "limit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
limit-deps = { path = "./limit-deps" }

[dev-dependencies]
limit-server-auth-test = { path = "./limit-server-auth-test" }
limit-server-event-test = { path = "./limit-server-event-test" }
limit-test-utils = { path = "./limit-test-utils" }

[workspace]
members = [
    "limit-*",
    "tonic-gen"
]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
