[package]
name = "limit-am"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256 = {version = "*", features = ["pem", "ecdh"]}
elliptic-curve = {version = "*", features = ["pem", "ecdh"]}
aes = {version = "*"}
rand = "*"
base64 = "*"
anyhow = "*"
