[package]
name = "limit-server-auth-test"
version = "0.1.0"
edition = "2021"

[dependencies]
limit-deps = { path = "../limit-deps" }
limit-server-auth = { path = "../limit-server-auth" }
limit-db = { path = "../limit-db" }
limit-am = { path = "../limit-am" }
limit-config = { path = "../limit-config" }
limit-test-utils = { path = "../limit-test-utils" }
