[package]
name = "limit-server-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic-gen = { path = "../tonic-gen" }

limit-am = { path = "../limit-am" }
limit-config = { path = "../limit-config" }
limit-db = { path = "../limit-db" }
limit-deps = { path = "../limit-deps" }
limit-utils = { path = "../limit-utils" }

[dev-dependencies]
limit-test-utils = {path = "../limit-test-utils"}
