[package]
name = "limit-server-event-test"
version = "0.1.0"
edition = "2021"

[dependencies]
limit-server-auth = { path = "../limit-server-auth" }
limit-server-event = { path = "../limit-server-event" }
limit-test-utils = { path = "../limit-test-utils" }
limit-deps = { path = "../limit-deps" }
limit-db = { path = "../limit-db" }
limit-am = { path = "../limit-am" }
limit-config = { path = "../limit-config" }
limit-utils = { path = "../limit-utils" }
