[package]
name = "limit-server-event"
version = "0.1.0"
edition = "2021"

[dependencies]
volo-gen = { path = "../volo-gen" }

limit-deps = { path = "../limit-deps" }
limit-server-auth = { path = "../limit-server-auth" }
limit-db = { path = "../limit-db" }
limit-am = { path = "../limit-am" }
limit-config = {path = "../limit-config"}
limit-utils = {path = "../limit-utils"}
