[package]
name = "limit-test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
crossbeam-channel = "*"
toml = "*"
volo = "*"
volo-grpc = "*"
futures = "*"
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1"

limit-am = { path = "../limit-am" }
limit-server-auth = { path = "../limit-server-auth" }
limit-db = {path = "../limit-db"}
limit-config = {path = "../limit-config"}

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]